<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout_id1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WaveWriteActivity">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/scaled_background" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/editText_Password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="155dp"
            android:layout_marginStart="24dp"
            android:background="@color/primaryButtonColorLight"
            android:contentDescription="@string/editText_Password_Description"
            android:ems="10"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/textView5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="19dp"
            android:layout_marginEnd="155dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/textView_Password_Description"
            android:text="@string/textView_Password"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toTopOf="@+id/editText_Password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="155dp"
            android:layout_marginStart="24dp"
            android:contentDescription="@string/textView_Message_Description"
            android:text="@string/textView_Message"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toTopOf="@+id/editText2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.03"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_Password" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:background="@color/primaryButtonColorLight"
            android:contentDescription="@string/editText_Message_Description"
            android:inputType="textMultiLine"
            android:lines="8"
            android:maxLines="10"
            android:minLines="6"
            android:scrollbars="vertical"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toTopOf="@+id/textView_File"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <Button
            android:id="@+id/buttonFileSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="279dp"
            android:layout_marginStart="24dp"
            android:text="@string/button5_fileSearch_Text"
            app:layout_constraintBottom_toTopOf="@+id/buttonHideMSG"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.06"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_File" />

        <TextView
            android:id="@+id/textView_File"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="310dp"
            android:layout_marginStart="24dp"
            android:text="@string/textView_File"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toTopOf="@+id/buttonFileSearch"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText2" />

        <Button
            android:id="@+id/buttonHideMSG"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="131dp"
            android:layout_marginStart="141dp"
            android:text="@string/button_HideMSG"
            app:layout_constraintBottom_toTopOf="@+id/button11"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText2"
            app:layout_constraintVertical_chainStyle="packed" />

        <Button
            android:id="@+id/button11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="148dp"
            android:layout_marginStart="148dp"
            android:text="@string/backButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonHideMSG" />

    </android.support.constraint.ConstraintLayout>
</FrameLayout>