<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WaveReadActivity">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/scaled_background" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="148dp"
            android:layout_marginStart="148dp"
            android:text="@string/backButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonFindMSG" />

        <TextView
            android:id="@+id/textView_File2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="210dp"
            android:layout_marginStart="24dp"
            android:text="@string/textView_File"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toTopOf="@+id/buttonFileSearch2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_Password2"
            app:layout_constraintVertical_chainStyle="spread" />

        <Button
            android:id="@+id/buttonFileSearch2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:layout_marginEnd="170dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/button5_fileSearch_Text"
            app:layout_constraintBottom_toTopOf="@+id/buttonFindMSG"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_File2" />

        <EditText
            android:id="@+id/editText_Password2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="119dp"
            android:layout_marginStart="24dp"
            android:background="@color/primaryButtonColorLight"
            android:contentDescription="@string/editText_Password_Description"
            android:ems="10"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_Password2" />

        <TextView
            android:id="@+id/textView_Password2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="155dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/textView_Password_Description"
            android:text="@string/textView_Password"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toTopOf="@+id/editText_Password2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <Button
            android:id="@+id/buttonFindMSG"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="175dp"
            android:layout_marginEnd="141dp"
            android:layout_marginStart="132dp"
            android:layout_marginTop="32dp"
            android:text="@string/button_FindMSG"
            app:layout_constraintBottom_toTopOf="@+id/button9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_Password2" />
    </android.support.constraint.ConstraintLayout>
</FrameLayout>